# supa-mdx-lint

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  scratch.md
.github/workflows/: build.yml  docs.yml  publish.yml  smoke-test.yml  test.yml
.rules/: create-new-line-rules.md
npm-binary-distributions/darwin/: package.json
npm-binary-distributions/linux-arm/: package.json
npm-binary-distributions/linux-arm64/: package.json
npm-binary-distributions/linux-i686/: package.json
npm-binary-distributions/linux-x64/: package.json
npm-binary-distributions/win32-i686/: package.json
npm-binary-distributions/win32-x64/: package.json
scripts/: build-in-docker.sh  bump-version.sh
src/: app_error.rs  cli.rs  comments.rs  config.rs  context.rs  document.rs  errors.rs  fix.rs  geometry.rs  lib.rs  location.rs  main.rs  output.rs  parser.rs  rope.rs  rules.rs  utils.rs
src/cli/: interactive.rs
src/output/: markdown.rs  pretty.rs  rdf.rs  simple.rs
src/rules/: mod.rs  rule001_heading_case.rs  rule002_admonition_types.rs  rule003_spelling.rs  rule004_exclude_words.rs  rule005_admonition_newlines.rs  rule006_no_absolute_urls.rs
src/rules/rule003_spelling/: CREDITS.md  dictionary.txt  suggestions.rs  test_dictionary.txt
src/snapshots/: supa_mdx_lint__tests__public_api.snap
src/utils/: char_tree.rs  lru.rs  mdast.rs  path.rs  regex.rs  text.rs  words.rs
supa-mdx-macros/: Cargo.toml
supa-mdx-macros/src/: lib.rs
tests/: autofix_tests.rs  bad001.mdx  good001.mdx  good002.mdx  integration_tests.rs  rules.rs  supa-mdx-lint.config.toml
tests/nested/: good003.mdx
tests/rule002/: mod.rs  rule002.mdx  supa-mdx-lint.config.toml
tests/rule003/: mod.rs  rule003.mdx  supa-mdx-lint.config.toml
tests/rule004/: mod.rs  rule004.mdx  supa-mdx-lint.config.toml
tests/rule006/: mod.rs  rule006.mdx  supa-mdx-lint.config.toml
