[package]
name = "supa-mdx-lint"
description = "Lint MDX files according to the Supabase style guide"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
exitcode = "1.1.2"
glob = "0.3.1"
log = "0.4.22"
markdown = "1.0.0-alpha.21"
once_cell = "1.20.2"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
simplelog = "0.12.2"
supa_mdx_macros = { path = "./supa-mdx-macros" }
toml = "0.8.19"
tsify = "0.4.5"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["console"] }

[dev-dependencies]
assert_cmd = "2.0.16"
ctor = "0.2.8"
env_logger = "0.11.5"
js-sys = "0.3.72"
predicates = "3.1.2"
tempfile = "3.13.0"
wasm-bindgen-test = "0.3.45"
