[package]
name = "supa-mdx-lint"
description = "Lint MDX files according to the Supabase style guide"
author = "Charis Lam"
version = "0.1.7-alpha"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
crop = { version = "0.4.2", features = ["graphemes"] }
exitcode = "1.1.2"
glob = "0.3.1"
itertools = "0.13.0"
log = "0.4.22"
markdown = "1.0.0-alpha.21"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
simplelog = "0.12.2"
supa_mdx_macros = { path = "./supa-mdx-macros" }
thiserror = "2.0.3"
toml = "0.8.19"

[dev-dependencies]
assert_cmd = "2.0.16"
ctor = "0.2.8"
env_logger = "0.11.5"
predicates = "3.1.2"
tempfile = "3.13.0"
