[package]
name = "supa-mdx-lint"
description = "Lint MDX files according to the Supabase style guide"
version = "0.2.8-alpha"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bon = "3.3.2"
clap = { version = "4.5.20", features = ["derive"] }
crop = { version = "0.4.2", features = ["graphemes"] }
dialoguer = { version = "0.11.0", optional = true }
either = { version = "1.14.0", features = ["serde"] }
exitcode = "1.1.2"
fastrand = "2.3.0"
gag = "1.0.0"
glob = "0.3.1"
indexmap = "2.7.1"
itertools = "0.13.0"
log = "0.4.22"
markdown = "1.0.0-alpha.21"
miette = { version = "7.5.0", optional = true, features = ["fancy"] }
owo-colors = { version = "4.1.0", optional = true }
regex = "1.11.0"
regex-syntax = { version = "0.8.5", features = ["std", "unicode-perl"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
simplelog = "0.12.2"
supa_mdx_macros = { path = "./supa-mdx-macros" }
symspell = "0.4.3"
thiserror = "2.0.3"
toml = "0.8.19"

[dev-dependencies]
assert_cmd = "2.0.16"
ctor = "0.2.8"
env_logger = "0.11.5"
predicates = "3.1.2"
tempfile = "3.13.0"

[features]
interactive = ["dep:dialoguer", "dep:owo-colors", "pretty"]
pretty = ["dep:miette"]
